Improve readability. Fix selectListener

--- a/css/game.css
+++ b/css/game.css
@@ -47,6 +47,7 @@
   height: 5rem;
   font-size: 1rem;
   margin: 0.5rem;
+  padding: 0;
 }
 
 @media screen and (min-width: 760px) {
